--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
 
                 <div class="column">
-                    <h4>Bsc In CSE - Yale University</h4>
+<!--                     <h4>Bsc In CSE - Yale University</h4> -->
                     <h4>2012 - 2016</h4> 
                     <p>Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.
                     </p>
